Tue Mar 17 15:51:30 PST 1998 Manish Singh <yosh@gimp.org>

	* glib.h: gboolean type changed to int
	* garray.c: complete redo by Josh MacDonald

Tue Mar 17 22:45:39 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_get_arg): return real boolean values
	not just numbers.

	* gtk/gtktogglebutton.c (gtk_toggle_button_set_state): check
	state for != 0, otherwise we get strange results.

Tue Mar 17 01:55:00 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkmain.c gtk/gtkentry.c: Try to guess if we can
	  use the mb* functions safely. (For glibc, they do
	  UTF-8). Heuristic is (X_LOCALE && locale != C/POSIX)
	  || (mblen("\xc0", MB_CUR_MAX) == 1).
       
	(From: "Richard Lloyd" <rkl@csc.liv.ac.uk>)
	
	* gdk/gdk.c (gdk_ic_get_attr): Use an intermediate
	  variable to avoid taking the address of the result
	  of va_arg. 

	* gtk/gtkentry.c gtk/gtkeditable.c gtkobject.c
	  gtk/testselection.c: signedness fixups

	* gtk/gtkcontainer.c: Fixed implicit cast between
	  gpointer and func pointer by changing.

	* gtk/gtkcombo.c, gtk/gtkentry.c, gtk/gtktext.c:
	  static void forward declaration vs. void actual fixed

	* gtk/testgtk.c: Limit total number of tree items to 10,000
	
Mon Mar 16 21:14:52 1998  Owen Taylor  <owt1@cornell.edu>

	* gdk/gdkvisual.c: Put visual names into #ifdef G_ENABLE_DEBUG
	    gtk-jbuhler-980315-0.patch

	* gdk/gdkcc.c: Changed DEBUG => G_ENABLE_DEBUG, eliminate
	  unused variable warnings.

Tue Mar 17 16:19:47 1998  Tim Janik  <timj@gimp.org>

	* gdk/gdk.c: 
	* gdk/gdkvisual.c: changed some debugging messages to be prefixed
	by "Gdk:".

	* gtk/gtkwidget.c (gtk_widget_real_draw): applied
 	gtk-shige-980317-0.patch.gz to set all event fields, but modified
	the event.send_event field to be set to TRUE, since the event is not
	really comming from the server.

	* gtk/gtkwindow.c (gtk_window_init): applied gtk-ograf-980317-1.patch.gz
	which cares about an initial setting of program name and program class.
