@@ -1,3 +1,11 @@
+Wed Mar 18 02:06:52 1998  Tim Janik  <timj@gtk.org>
+
+	* gtk/gtkcontainer.c (gtk_container_border_width): use the resize queue.
+
+	* gtk/gtkwindow.c (gtk_window_set_arg): gtk_window_set_hints() after
+ 	setting certain arguments, so they actually take affect.
+	(gtk_window_set_policy): likewise.
+
 Tue Mar 17 15:51:30 PST 1998 Manish Singh <yosh@gimp.org>
 
 	* glib.h: gboolean type changed to int
